# projection

./: .gitmodules  CMakeLists.txt  README.md
include/projection/: camera.hpp  quaternion.h  se3.h  utils.h
src/: CMakeLists.txt  camera.cpp
tests/: CMakeLists.txt  camera_tests.cpp
